[[bin]]
name = 'substrate-kitties'
path = 'src/main.rs'

[workspace]
members = ['runtime']

[package]
authors = ['Bryan Chen']
build = 'build.rs'
edition = '2018'
name = 'substrate-kitties'
version = '2.0.0'

[build-dependencies]
vergen = '3.0.4'

[build-dependencies.build-script-utils]
git = 'https://github.com/paritytech/substrate.git'
package = 'substrate-build-script-utils'
rev = '9ded493bac83f9d2a66e6afce068e2ead2bd20ab'
[profile.release]
panic = 'unwind'

[dependencies]
futures = '0.3.1'
log = '0.4.8'
parking_lot = '0.9.0'
tokio = '0.1.22'
trie-root = '0.15.2'

[dependencies.sc-consensus-aura]
git = 'https://github.com/paritytech/substrate.git'
rev = '9ded493bac83f9d2a66e6afce068e2ead2bd20ab'

[dependencies.sp-consensus-aura]
git = 'https://github.com/paritytech/substrate.git'
rev = '9ded493bac83f9d2a66e6afce068e2ead2bd20ab'

[dependencies.sc-basic-authority]
git = 'https://github.com/paritytech/substrate.git'
rev = '9ded493bac83f9d2a66e6afce068e2ead2bd20ab'

[dependencies.codec]
package = 'parity-scale-codec'
version = '1.0.0'

[dependencies.sp-consensus]
git = 'https://github.com/paritytech/substrate.git'
rev = '9ded493bac83f9d2a66e6afce068e2ead2bd20ab'

[dependencies.ctrlc]
features = ['termination']
version = '3.1.3'

[dependencies.futures01]
package = 'futures'
version = '0.1.29'

[dependencies.grandpa]
git = 'https://github.com/paritytech/substrate.git'
package = 'sc-finality-grandpa'
rev = '9ded493bac83f9d2a66e6afce068e2ead2bd20ab'

[dependencies.grandpa-primitives]
git = 'https://github.com/paritytech/substrate.git'
package = 'sp-finality-grandpa'
rev = '9ded493bac83f9d2a66e6afce068e2ead2bd20ab'

[dependencies.sp-inherents]
git = 'https://github.com/paritytech/substrate.git'
rev = '9ded493bac83f9d2a66e6afce068e2ead2bd20ab'

[dependencies.sc-network]
git = 'https://github.com/paritytech/substrate.git'
rev = '9ded493bac83f9d2a66e6afce068e2ead2bd20ab'

[dependencies.sp-core]
git = 'https://github.com/paritytech/substrate.git'
rev = '9ded493bac83f9d2a66e6afce068e2ead2bd20ab'

[dependencies.runtime]
package = 'substrate-kitties-runtime'
path = 'runtime'

[dependencies.sc-cli]
git = 'https://github.com/paritytech/substrate.git'
rev = '9ded493bac83f9d2a66e6afce068e2ead2bd20ab'

[dependencies.sc-client]
git = 'https://github.com/paritytech/substrate.git'
rev = '9ded493bac83f9d2a66e6afce068e2ead2bd20ab'

[dependencies.sc-executor]
git = 'https://github.com/paritytech/substrate.git'
rev = '9ded493bac83f9d2a66e6afce068e2ead2bd20ab'

[dependencies.sc-service]
git = 'https://github.com/paritytech/substrate.git'
rev = '9ded493bac83f9d2a66e6afce068e2ead2bd20ab'

[dependencies.sp-io]
git = 'https://github.com/paritytech/substrate.git'
rev = '9ded493bac83f9d2a66e6afce068e2ead2bd20ab'

[dependencies.sp-runtime]
git = 'https://github.com/paritytech/substrate.git'
rev = '9ded493bac83f9d2a66e6afce068e2ead2bd20ab'

[dependencies.sc-transaction-pool]
git = 'https://github.com/paritytech/substrate.git'
rev = '9ded493bac83f9d2a66e6afce068e2ead2bd20ab'

[dependencies.sp-transaction-pool]
git = 'https://github.com/paritytech/substrate.git'
rev = '9ded493bac83f9d2a66e6afce068e2ead2bd20ab'
