[dependencies.aura]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
package = 'pallet-aura'
rev = '665304397ff7e60d7cda177a0623a571e5909a2c'

[dependencies.aura-primitives]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
package = 'sp-consensus-aura'
rev = '665304397ff7e60d7cda177a0623a571e5909a2c'

[dependencies.balances]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
package = 'pallet-balances'
rev = '665304397ff7e60d7cda177a0623a571e5909a2c'

[dependencies.block-builder-api]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
package = 'sp-block-builder'
rev = '665304397ff7e60d7cda177a0623a571e5909a2c'

[dependencies.codec]
default-features = false
features = ['derive']
package = 'parity-scale-codec'
version = '1.0.0'

[dependencies.executive]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
package = 'frame-executive'
rev = '665304397ff7e60d7cda177a0623a571e5909a2c'

[dependencies.grandpa]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
package = 'pallet-grandpa'
rev = '665304397ff7e60d7cda177a0623a571e5909a2c'

[dependencies.indices]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
package = 'pallet-indices'
rev = '665304397ff7e60d7cda177a0623a571e5909a2c'

[dependencies.inherents]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
package = 'sp-inherents'
rev = '665304397ff7e60d7cda177a0623a571e5909a2c'

[dependencies.offchain-primitives]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
package = 'sp-offchain'
rev = '665304397ff7e60d7cda177a0623a571e5909a2c'

[dependencies.primitives]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
package = 'sp-core'
rev = '665304397ff7e60d7cda177a0623a571e5909a2c'

[dependencies.randomness-collective-flip]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
package = 'pallet-randomness-collective-flip'
rev = '665304397ff7e60d7cda177a0623a571e5909a2c'

[dependencies.rstd]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
package = 'sp-std'
rev = '665304397ff7e60d7cda177a0623a571e5909a2c'

[dependencies.runtime-io]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
package = 'sp-io'
rev = '665304397ff7e60d7cda177a0623a571e5909a2c'

[dependencies.safe-mix]
default-features = false
version = '1.0.0'

[dependencies.serde]
features = ['derive']
optional = true
version = '1.0.101'

[dependencies.sp-api]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
rev = '665304397ff7e60d7cda177a0623a571e5909a2c'

[dependencies.sp-runtime]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
rev = '665304397ff7e60d7cda177a0623a571e5909a2c'

[dependencies.sp-session]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
rev = '665304397ff7e60d7cda177a0623a571e5909a2c'

[dependencies.sudo]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
package = 'pallet-sudo'
rev = '665304397ff7e60d7cda177a0623a571e5909a2c'

[dependencies.support]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
package = 'frame-support'
rev = '665304397ff7e60d7cda177a0623a571e5909a2c'

[dependencies.system]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
package = 'frame-system'
rev = '665304397ff7e60d7cda177a0623a571e5909a2c'

[dependencies.timestamp]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
package = 'pallet-timestamp'
rev = '665304397ff7e60d7cda177a0623a571e5909a2c'

[dependencies.transaction-payment]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
package = 'pallet-transaction-payment'
rev = '665304397ff7e60d7cda177a0623a571e5909a2c'

[dependencies.txpool-runtime-api]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
package = 'sp-transaction-pool-runtime-api'
rev = '665304397ff7e60d7cda177a0623a571e5909a2c'

[dependencies.version]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
package = 'sp-version'
rev = '665304397ff7e60d7cda177a0623a571e5909a2c'

[features]
default = ['std']
std = [
    'aura-primitives/std',
    'aura/std',
    'balances/std',
    'block-builder-api/std',
    'codec/std',
    'executive/std',
    'grandpa/std',
    'indices/std',
    'inherents/std',
    'offchain-primitives/std',
    'primitives/std',
    'randomness-collective-flip/std',
    'rstd/std',
    'runtime-io/std',
    'safe-mix/std',
    'serde',
    'sp-api/std',
    'sp-runtime/std',
    'sp-session/std',
    'sudo/std',
    'support/std',
    'system/std',
    'timestamp/std',
    'transaction-payment/std',
    'txpool-runtime-api/std',
    'version/std',
]

[package]
authors = ['Bryan Chen']
edition = '2018'
name = 'substrate-kitties-runtime'
version = '2.0.0'
[build-dependencies.wasm-builder-runner]
git = 'https://github.com/paritytech/substrate.git'
package = 'substrate-wasm-builder-runner'
rev = '665304397ff7e60d7cda177a0623a571e5909a2c'
version = '1.0.4'
