[dependencies.aura]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
package = 'pallet-aura'
rev = '9ded493bac83f9d2a66e6afce068e2ead2bd20ab'

[dependencies.sp-consensus-aura]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
rev = '9ded493bac83f9d2a66e6afce068e2ead2bd20ab'

[dependencies.balances]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
package = 'pallet-balances'
rev = '9ded493bac83f9d2a66e6afce068e2ead2bd20ab'

[dependencies.sp-block-builder]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
rev = '9ded493bac83f9d2a66e6afce068e2ead2bd20ab'

[dependencies.codec]
default-features = false
features = ['derive']
package = 'parity-scale-codec'
version = '1.0.0'

[dependencies.frame-executive]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
rev = '9ded493bac83f9d2a66e6afce068e2ead2bd20ab'

[dependencies.grandpa]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
package = 'pallet-grandpa'
rev = '9ded493bac83f9d2a66e6afce068e2ead2bd20ab'

[dependencies.indices]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
package = 'pallet-indices'
rev = '9ded493bac83f9d2a66e6afce068e2ead2bd20ab'

[dependencies.sp-inherents]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
rev = '9ded493bac83f9d2a66e6afce068e2ead2bd20ab'

[dependencies.sp-offchain]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
rev = '9ded493bac83f9d2a66e6afce068e2ead2bd20ab'

[dependencies.sp-core]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
rev = '9ded493bac83f9d2a66e6afce068e2ead2bd20ab'

[dependencies.randomness-collective-flip]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
package = 'pallet-randomness-collective-flip'
rev = '9ded493bac83f9d2a66e6afce068e2ead2bd20ab'

[dependencies.sp-std]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
rev = '9ded493bac83f9d2a66e6afce068e2ead2bd20ab'

[dependencies.sp-io]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
rev = '9ded493bac83f9d2a66e6afce068e2ead2bd20ab'

[dependencies.safe-mix]
default-features = false
version = '1.0.0'

[dependencies.serde]
features = ['derive']
optional = true
version = '1.0.101'

[dependencies.sp-api]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
rev = '9ded493bac83f9d2a66e6afce068e2ead2bd20ab'

[dependencies.sp-runtime]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
rev = '9ded493bac83f9d2a66e6afce068e2ead2bd20ab'

[dependencies.sp-session]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
rev = '9ded493bac83f9d2a66e6afce068e2ead2bd20ab'

[dependencies.sudo]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
package = 'pallet-sudo'
rev = '9ded493bac83f9d2a66e6afce068e2ead2bd20ab'

[dependencies.frame-support]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
rev = '9ded493bac83f9d2a66e6afce068e2ead2bd20ab'

[dependencies.system]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
package = 'frame-system'
rev = '9ded493bac83f9d2a66e6afce068e2ead2bd20ab'

[dependencies.timestamp]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
package = 'pallet-timestamp'
rev = '9ded493bac83f9d2a66e6afce068e2ead2bd20ab'

[dependencies.transaction-payment]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
package = 'pallet-transaction-payment'
rev = '9ded493bac83f9d2a66e6afce068e2ead2bd20ab'

[dependencies.sp-transaction-pool]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
rev = '9ded493bac83f9d2a66e6afce068e2ead2bd20ab'

[dependencies.sp-version]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
rev = '9ded493bac83f9d2a66e6afce068e2ead2bd20ab'

[features]
default = ['std']
std = [
    'sp-consensus-aura/std',
    'aura/std',
    'balances/std',
    'sp-block-builder/std',
    'codec/std',
    'frame-executive/std',
    'grandpa/std',
    'indices/std',
    'sp-inherents/std',
    'sp-offchain/std',
    'sp-core/std',
    'randomness-collective-flip/std',
    'sp-std/std',
    'sp-io/std',
    'safe-mix/std',
    'serde',
    'sp-api/std',
    'sp-runtime/std',
    'sp-session/std',
    'sudo/std',
    'frame-support/std',
    'system/std',
    'timestamp/std',
    'transaction-payment/std',
    'sp-transaction-pool/std',
    'sp-version/std',
]

[package]
authors = ['Bryan Chen']
edition = '2018'
name = 'substrate-kitties-runtime'
version = '2.0.0'
[build-dependencies.wasm-builder-runner]
git = 'https://github.com/paritytech/substrate.git'
package = 'substrate-wasm-builder-runner'
rev = '9ded493bac83f9d2a66e6afce068e2ead2bd20ab'
version = '1.0.4'
