[package]
name = "node-template"
version = "2.0.0"
authors = ["Anonymous"]
build = "build.rs"
edition = "2018"

[[bin]]
name = "node-template"
path = "src/main.rs"

[dependencies]
futures = "0.3.1"
futures01 = { package = "futures", version = "0.1.29" }
ctrlc = { version = "3.1.3", features = ["termination"] }
log = "0.4.8"
tokio = "0.1.22"
parking_lot = "0.9.0"
codec = { package = "parity-scale-codec", version = "1.0.0" }
trie-root = "0.15.2"
sp-io = { version = "2.0.0", git = 'https://github.com/paritytech/substrate.git', rev = 'df750ba072afecc8c99a9a29b24c323f1c965450'}
sc-cli = { version = "2.0.0", git = 'https://github.com/paritytech/substrate.git', rev = 'df750ba072afecc8c99a9a29b24c323f1c965450' }
sp-core = { version = "2.0.0", git = 'https://github.com/paritytech/substrate.git', rev = 'df750ba072afecc8c99a9a29b24c323f1c965450' }
sc-executor = { version = "2.0.0", git = 'https://github.com/paritytech/substrate.git', rev = 'df750ba072afecc8c99a9a29b24c323f1c965450' }
sc-service = { version = "2.0.0", git = 'https://github.com/paritytech/substrate.git', rev = 'df750ba072afecc8c99a9a29b24c323f1c965450' }
sp-inherents = { version = "2.0.0", git = 'https://github.com/paritytech/substrate.git', rev = 'df750ba072afecc8c99a9a29b24c323f1c965450' }
sc-transaction-pool = { version = "2.0.0", git = 'https://github.com/paritytech/substrate.git', rev = 'df750ba072afecc8c99a9a29b24c323f1c965450' }
sp-transaction-pool = { version = "2.0.0", git = 'https://github.com/paritytech/substrate.git', rev = 'df750ba072afecc8c99a9a29b24c323f1c965450' }
sc-network = { version = "0.8", git = 'https://github.com/paritytech/substrate.git', rev = 'df750ba072afecc8c99a9a29b24c323f1c965450' }
sc-consensus-aura = { version = "0.8", git = 'https://github.com/paritytech/substrate.git', rev = 'df750ba072afecc8c99a9a29b24c323f1c965450' }
sp-consensus-aura = { version = "0.8", git = 'https://github.com/paritytech/substrate.git', rev = 'df750ba072afecc8c99a9a29b24c323f1c965450' }
sp-consensus = { version = "0.8", git = 'https://github.com/paritytech/substrate.git', rev = 'df750ba072afecc8c99a9a29b24c323f1c965450' }
grandpa = { version = "2.0.0", git = 'https://github.com/paritytech/substrate.git', rev = 'df750ba072afecc8c99a9a29b24c323f1c965450', package = "sc-finality-grandpa" }
grandpa-primitives = { version = "2.0.0", git = 'https://github.com/paritytech/substrate.git', rev = 'df750ba072afecc8c99a9a29b24c323f1c965450', package = "sp-finality-grandpa" }
sc-client = { version = "2.0.0", git = 'https://github.com/paritytech/substrate.git', rev = 'df750ba072afecc8c99a9a29b24c323f1c965450' }
node-template-runtime = { version = "2.0.0", git = 'https://github.com/paritytech/substrate.git', rev = 'df750ba072afecc8c99a9a29b24c323f1c965450' }
sp-runtime = { version = "2.0.0", git = 'https://github.com/paritytech/substrate.git', rev = 'df750ba072afecc8c99a9a29b24c323f1c965450' }
sc-basic-authority = { git = 'https://github.com/paritytech/substrate.git', rev = 'df750ba072afecc8c99a9a29b24c323f1c965450' }

[build-dependencies]
vergen = "3.0.4"
build-script-utils = { version = "2.0.0", git = 'https://github.com/paritytech/substrate.git', rev = 'df750ba072afecc8c99a9a29b24c323f1c965450', package = "substrate-build-script-utils" }
